[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "Hugging face sentiment analysis"
authors = ["Sudarshan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.6.1"
datasets = "^3.2.0"
huggingface-hub = "^0.28.1"
joblib = "^1.4.2"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
